# hvsampledata

./: README.md  pixi.toml  pyproject.toml
.github/workflows/: build.yaml  test.yaml
scripts/: generate_typehints.py
scripts/conda/: build.sh
src/hvsampledata/: __init__.py  __init__.pyi  _util.py
src/hvsampledata/_data/: AAPL.csv  air_temperature_small.nc  apple_stocks.csv  earthquake.csv  faang_stocks.csv  landsat_rgb.tif  stocks.csv  us_states.geojson  world_countries.parquet
tests/: test_gridded.py  test_tabular.py
