[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "hvsampledata"
dynamic = ["version"]
description = "Datasets for the HoloViz projects"
readme = "README.md"
license = { text = "BSD" }
requires-python = ">=3.9"
authors = [{ name = "HoloViz developers", email = "developers@holoviz.org" }]
maintainers = [{ name = "HoloViz developers", email = "developers@holoviz.org" }]
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
]
dependencies = ["platformdirs", "urllib3"]

# [project.urls]
# Homepage = "https://holoviews.org"
# Source = "https://github.com/holoviz/holoviews"
# HoloViz = "https://holoviz.org/"

# [project.optional-dependencies]
# recommended = ["matplotlib >=3", "plotly >=4.0"]
# tests = ["pytest", "pytest-rerunfailures", "pytest-asyncio"]

# [project.scripts]
# holoviews = "holoviews.util.command:main"

[tool.hatch.version]
source = "vcs"
raw-options = { version_scheme = "no-guess-dev" }

[tool.hatch.build.targets.wheel]
packages = ["src/hvsampledata"]

[tool.hatch.build.targets.sdist]
packages = ["src/hvsampledata"]
include = ["scripts"]

[tool.pytest.ini_options]
addopts = ["--strict-config", "--strict-markers", "--color=yes"]
minversion = "7"
xfail_strict = true
log_cli_level = "INFO"
filterwarnings = []

[tool.ruff]
line-length = 99
fix = true

[tool.ruff.lint]
select = [
    "B",
    "C4",
    "E",
    "EM",
    "F",
    "FLY",
    "I",
    "ICN",
    "ISC",
    "NPY",
    "PIE",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "PT",
    "RUF",
    "SIM",
    "UP",
    "W",
]

ignore = [
    "E402", # Module level import not at top of file
    "E501", # Line too long
    "E712", # Comparison to true should be is
    "E731", # Do not assign a lambda expression, use a def
    "E741", # Ambiguous variable name
    "PLR091", # Too many arguments/branches/statements
    "PLR2004", # Magic value used in comparison
    "PLW2901", # `for` loop variable is overwritten
    "RUF012", # Mutable class attributes should use `typing.ClassVar`
]

unfixable = [
    "F401", # Unused imports
    "F841", # Unused variable
]

[tool.ruff.lint.isort]
known-first-party = ["hvsampledata"]
required-imports = ["from __future__ import annotations"]
force-wrap-aliases = true
combine-as-imports = true

[tool.codespell]
write-changes = true
